--- a/src/TestInfrastructure/packages.config
+++ b/src/TestInfrastructure/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
-  <package id="Unity.Interception" version="3.5.1404.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
+  <package id="Unity" version="4.0.1" targetFramework="net45" />
+  <package id="Unity.Interception" version="4.0.1" targetFramework="net45" />
 </packages>
